see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-Oct-2009 Ron Severdia
^ Replaced tables with CSS
# Reworked CSS class structure
^ Added classes to components still using JParam (emulate JForm)

09-Oct-2009 Mark Dexter
+ Added categories views to weblinks, newsfeeds, contacts (Elin Waring)
^ Redid frontend layouts for contacts and newsfeeds (Andrea Tarr)
# Fixed error in Add New Access Level
^ Moved css files of classes that replace inline styles to _html folder in milkyway (Andrea Tarr)
# Fixed contact picker modal (Elin Waring)
^ Moved SetState from controllers to models (Elin Waring)

09-Oct-2009 Hannes Papenberg
^ Removed the root_user feature.
# Fixed the userprofile in the backend. This still needs some changes.

08-Oct-2009 Ercan Ozkaya
# Converted clone calls to be statements

08-Oct-2009 Andrew Eddie
+ Added SERVER_UTC and USER_UTC filters to JForm::filter to convert user supplied dates to UTC server or UTC user time respectively.
+ Added access argument to JHtmlJGrid::published to only display the icon without click action if not permitted to perform the action.
+ Added save-as-copy support to JControllerForm.
+ Added access control checks to JControllerForm with overrides for extended classes (_allowAdd, _allowEdit, _allowSave).
+ Hooked in access controls to backend com_content toolbars, views and controllers.

07-Oct-2009 Ercan Ozkaya
 # [#18304] require, require_once, include, & include_once are statements, not functions (Contributed by Joseph LeBlanc)

07-Oct-2009 Andrew Eddie
# Fixed static/object usage bug for default in JFilterInput::clean (sync'd with 1.5)

06-Oct-2009 Ron Severdia
# BlueStork CSS cleanup