@@ -9,8 +9,7 @@
 
 defined('_JEXEC') or die('Invalid Request.');
 
-// Load default stylesheet.
-JHtml::stylesheet('default.css', 'administrator/components/com_redirect/media/css/');
+
 ?>
 
 <h1>Default</h1>
